fixed spacing issue

--- a/css/siccarazure.scss
+++ b/css/siccarazure.scss
@@ -30,8 +30,12 @@ body {
         border-bottom: 1px solid;
     }
 
-    .Password, .sendCode {
+    .sendCode {
         margin-bottom: 1rem;
+    }
+
+    .Password{
+        margin-top:1rem;
     }
 
     ul {
